prometheus/grafana_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-grafana-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.vaee.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
